--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,7 +5,7 @@
   Include:
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", 'yes', true
+    = check_box_tag "ratings[#{rating}]", '1', !session[:ratings].nil? && session[:ratings].key?(rating)
   = submit_tag 'Refresh', :id => "ratings_submit"
 
 %table#movies.table.table-striped.col-md-12
@@ -13,7 +13,7 @@
     %tr
       %th{:class=>@title_header, :id=> "title_header"}= link_to "Movie Title", movies_path(:sort => 'title')
       %th Rating
-      %th{:class=>@release_date_header, :id=> "release_date_header"}= link_to "Release Date", movies_path(:sort => 'release_date')
+      %th{:class=>@release_date_header, :id=> "release_date_header"}= link_to "Release Date", movies_path(:sort => 'date')
       %th More Info
   %tbody
     - @movies.each do |movie|
